tests/baselines/reference/esDecorators-classDeclaration-fields-staticAmbient(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
esDecorators-classDeclaration-fields-staticAmbient.ts(6,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-fields-staticAmbient.ts(7,5): error TS1206: Decorators are not valid here.
esDecorators-classDeclaration-fields-staticAmbient.ts(8,5): error TS1206: Decorators are not valid here.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== esDecorators-classDeclaration-fields-staticAmbient.ts (3 errors) ====
    declare let dec: any;
    
    const field3 = "field3";
    
    class C {
        @dec(1) static declare field1 = 1;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(2) static declare ["field2"] = 2;
        ~
!!! error TS1206: Decorators are not valid here.
        @dec(3) static declare [field3] = 3;
        ~
!!! error TS1206: Decorators are not valid here.
    }
    